--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -13,10 +12,131 @@
         android:layout_width="match_parent"
         android:layout_height="72dp"
         android:gravity="center"
-        android:text="ТЕСТ"
-        android:textSize="30sp" />
-
-    <include layout="@layout/activity_on_grid_layout" />
+        android:text="Test"
+        android:textSize="@dimen/text_view_size" />
 
 
+    <GridLayout
+        android:id="@+id/key_board"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center"
+        android:columnCount="4">
+
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/butt1"
+            style="@style/OptionButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/key_1" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/butt2"
+            style="@style/OptionButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/key_2" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/butt3"
+            style="@style/OptionButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/key_3" />
+
+        <com.google.android.material.button.MaterialButton
+            style="@style/OptionButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/key_split" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/butt4"
+            style="@style/OptionButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/key_4" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/butt5"
+            style="@style/OptionButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/key_5" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/butt6"
+            style="@style/OptionButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/key_6" />
+
+        <com.google.android.material.button.MaterialButton
+            style="@style/OptionButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/key_multiply" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/butt7"
+            style="@style/OptionButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/key_7" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/butt8"
+            style="@style/OptionButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/key_8" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/butt9"
+            style="@style/OptionButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/key_9" />
+
+        <com.google.android.material.button.MaterialButton
+            style="@style/OptionButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/key_sum" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/butt0"
+            style="@style/OptionButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/key_0" />
+
+        <com.google.android.material.button.MaterialButton
+            style="@style/OptionButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/key_dot" />
+
+
+        <com.google.android.material.button.MaterialButton
+            style="@style/OptionButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/key_result" />
+
+        <com.google.android.material.button.MaterialButton
+            style="@style/OptionButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/key_subtraction" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/butt_C"
+            style="@style/OptionButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/key_C" />
+
+    </GridLayout>
 </FrameLayout>
